# VariationalImplicitPointSetSurface

./: .gitignore  CMakeLists.txt  VariationalImplicitPointSetSuface.h  convert_paths.py  main.cpp  tet.xyz
cmake/: FindEigen3.cmake
include/internal/: AllocatorTraits.h  STLContainerTraits.h
include/utils/: NLoptimizer.h  ReadXYZ.h
